[package]
name = "pub-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
ngrok = { version = "0.12.4", features = ["axum"] }
tokio = { version = "1.31.0", features = ["rt-multi-thread", "macros"] }


# [target.x86_64-unknown-linux-musl]
# rustflags = ["-Z", "linker-flavor=ld"]